# lab5

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/client/: CMakeLists.txt  client.cc
src/client/h/: client.h
src/h/: client.h  server.h  shared.h  thread_pool.h
src/server/: main.cc  server.cc  thread_pool.cc
